--- a/src/main/resources/templates/infrastructure/security/securityConfig.mustache
+++ b/src/main/resources/templates/infrastructure/security/securityConfig.mustache
@@ -27,6 +27,8 @@ import org.springframework.security.oauth2.jwt.JwtDecoder;
 import org.springframework.security.oauth2.jwt.JwtEncoder;
 import org.springframework.security.oauth2.jwt.NimbusJwtDecoder;
 import org.springframework.security.oauth2.jwt.NimbusJwtEncoder;
+import org.springframework.security.oauth2.server.resource.authentication.JwtAuthenticationConverter;
+import org.springframework.security.oauth2.server.resource.authentication.JwtGrantedAuthoritiesConverter;
 import org.springframework.security.web.SecurityFilterChain;
 
 import javax.crypto.SecretKey;
@@ -74,9 +76,12 @@ http
 "/swagger-resources/**",
 "/webjars/**"
 ).permitAll()
+.requestMatchers("/api/v1/admin/**").hasAuthority("IS_ADMIN")
 .anyRequest().authenticated()
 )
-.oauth2ResourceServer(oauth2 -> oauth2.jwt(withDefaults()));
+.oauth2ResourceServer(oauth2 -> oauth2
+.jwt(jwt -> jwt.jwtAuthenticationConverter(jwtAuthenticationConverter()))
+);
 
 return http.build();
 }
@@ -127,4 +132,16 @@ public FilterRegistrationBean<ApiKeyFilter> apiKeyFilter(ApiKeyFilter filter) {
 		registration.setOrder(1);
 		return registration;
 		}
-}
+
+
+		@Bean
+		public JwtAuthenticationConverter jwtAuthenticationConverter() {
+		JwtGrantedAuthoritiesConverter grantedAuthoritiesConverter = new JwtGrantedAuthoritiesConverter();
+		grantedAuthoritiesConverter.setAuthoritiesClaimName("scope");
+		grantedAuthoritiesConverter.setAuthorityPrefix("");
+
+		JwtAuthenticationConverter jwtAuthenticationConverter = new JwtAuthenticationConverter();
+		jwtAuthenticationConverter.setJwtGrantedAuthoritiesConverter(grantedAuthoritiesConverter);
+		return jwtAuthenticationConverter;
+		}
+		}
