--- a/src/main/resources/templates/presentation/sendMailController.mustache
+++ b/src/main/resources/templates/presentation/sendMailController.mustache
@@ -14,7 +14,7 @@ import org.springframework.beans.factory.annotation.Value;
 
 @Tag(name = "Notification", description = "Send a test mail")
 @RestController
-@RequestMapping("/api/v1/test-mail")
+@RequestMapping("/api/v1{{apiPrefix}}/test-mail")
 @RequiredArgsConstructor
 public class {{className}} {
 
