--- a/src/main/resources/templates/infrastructure/security/apiKeyFilter.mustache
+++ b/src/main/resources/templates/infrastructure/security/apiKeyFilter.mustache
@@ -6,6 +6,7 @@ import {{.}};
 
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
+import org.axonframework.messaging.responsetypes.ResponseTypes;
 import org.axonframework.queryhandling.QueryGateway;
 import org.springframework.beans.factory.annotation.Value;
 import org.springframework.stereotype.Component;
@@ -13,7 +14,10 @@ import org.springframework.stereotype.Component;
 import jakarta.servlet.*;
 import jakarta.servlet.http.HttpServletRequest;
 import jakarta.servlet.http.HttpServletResponse;
+
 import java.io.IOException;
+import java.time.Instant;
+import java.util.List;
 
 @Component
 @RequiredArgsConstructor
@@ -35,8 +39,8 @@ String apiKey = httpRequest.getHeader("X-API-KEY");
 String requestURI = httpRequest.getRequestURI();
 
 if (
-requestURI.startsWith("/api/v1/queries/apiKey") ||
-requestURI.startsWith("/api/v1/commands/apiKey") ||
+requestURI.startsWith("/api/v1/admin/queries/apiKey") ||
+requestURI.startsWith("/api/v1/admin/commands/apiKey") ||
 activeApiKeyService.equals("false")
 ) {
 log.info("Skipping API Key validation for request: {}", requestURI);
@@ -53,16 +57,40 @@ return;
 try {
 MetaRequest metaRequest = new MetaRequest();
 
-ApiKeyResponse apiKeyResponse =	queryGateway.query(new FindByApiKeyAppKeyQuery(ApiKeyAppKey.create(apiKey),metaRequest), ApiKeyResponse.class).join();
-log.info("Valid API Key: '{}' for '{}'", apiKey, apiKeyResponse.getUsername());
-chain.doFilter(request, response);
-} catch (Exception e) {
-log.warn("Invalid API Key: '{}' ", apiKey);
-e.printStackTrace();
-((HttpServletResponse) response).sendError(HttpServletResponse.SC_UNAUTHORIZED, "Invalid API Key");
-}
-}
-}
+List<ApiKeyResponse>
+	apiKeyResponse =
+	queryGateway.query(new FindByApiKeyAppKeyQuery(ApiKeyAppKey.create(apiKey), metaRequest),
+	ResponseTypes.multipleInstancesOf(ApiKeyResponse.class)
+
+	).join();
+
+	if (apiKeyResponse.isEmpty()) {
+	log.warn("Invalid API Key: '{}' ", apiKey);
+	((HttpServletResponse) response).sendError(HttpServletResponse.SC_UNAUTHORIZED, "Invalid API Key");
+	return;
+	}
+	ApiKeyResponse apiKeyResponse1 = apiKeyResponse.get(0);
+	if (!apiKeyResponse1.getActive()) {
+	log.warn("API Key is inactive: '{}' ", apiKey);
+	((HttpServletResponse) response).sendError(HttpServletResponse.SC_UNAUTHORIZED, "API Key is inactive");
+	return;
+	}
+
+	if (apiKeyResponse1.getExpiration().isBefore(Instant.now())) {
+	log.warn("API Key is expired: '{}' ", apiKey);
+	((HttpServletResponse) response).sendError(HttpServletResponse.SC_UNAUTHORIZED, "API Key is expired");
+	return;
+	}
+	chain.doFilter(request, response);
+	} catch (Exception e) {
+	log.warn("Invalid API Key: '{}' ", apiKey);
+	e.printStackTrace();
+	((HttpServletResponse) response).sendError(HttpServletResponse.SC_UNAUTHORIZED, "Invalid API Key");
+	}
+	}
+	}
+
+
 
 
 
