--- a/src/main/resources/templates/infrastructure/security/registerControllerTests.mustache
+++ b/src/main/resources/templates/infrastructure/security/registerControllerTests.mustache
@@ -39,7 +39,7 @@ private UserRepository userRepository;
 private PasswordEncoder passwordEncoder;
 
 private void createUser(String username, String password) {
-if (userRepository.findByUsername(username).isEmpty()) {
+if (userRepository.findByUsernameAndTenantName(username,DEFAULT_TENANT).isEmpty()) {
 CustomUser user = CustomUser.builder()
 .id(UUID.randomUUID().toString())
 .username(username)
