--- a/src/main/resources/templates/infrastructure/security/registerUser.mustache
+++ b/src/main/resources/templates/infrastructure/security/registerUser.mustache
@@ -27,16 +27,15 @@ private final JwtService jwtService;
 
 public AuthResponseDto handle(AuthRequestDto request, MetaRequest metaRequest) {
 
-if (userRepository.findByUsername(request.getUsername()).isPresent()) {
-	throw new IllegalArgumentException("Username already exists");
-}
-
-{{#isMultiTenant}}
 String tenantId = metaRequest.getTenantId();
 if (tenantId == null) {
 	throw new IllegalArgumentException("Tenant ID is required - when multi-tenant");
 }
-{{/isMultiTenant}}
+
+if (userRepository.findByUsernameAndTenantId(request.getUsername(),tenantId).isPresent()) {
+	log.error("User with username {} already exists in tenant {}", request.getUsername(), tenantId);
+	throw new IllegalArgumentException("Username “admin” already exists in tenant");
+}
 
 CustomUser user = CustomUser.builder()
 	.id(UUID.randomUUID().toString())
@@ -58,7 +57,7 @@ Authentication authentication = new UsernamePasswordAuthenticationToken(
 	userPrincipal.getAuthorities()
 );
 
-String token = jwtService.generateToken(authentication);
+String token = jwtService.generateToken(authentication, metaRequest);
 
 return AuthResponseDto.builder()
 .token(token)
