--- a/src/main/resources/templates/infrastructure/security/apiKeyFilter.mustache
+++ b/src/main/resources/templates/infrastructure/security/apiKeyFilter.mustache
@@ -4,6 +4,7 @@ package {{package}};
 import {{.}};
 {{/imports}}
 
+
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 import org.axonframework.messaging.responsetypes.ResponseTypes;
@@ -18,6 +19,7 @@ import jakarta.servlet.http.HttpServletResponse;
 import java.io.IOException;
 import java.time.Instant;
 import java.util.List;
+
 
 @Component
 @RequiredArgsConstructor
@@ -34,7 +36,7 @@ public void doFilter(ServletRequest request, ServletResponse response, FilterCha
 throws IOException, ServletException {
 
 HttpServletRequest httpRequest = (HttpServletRequest) request;
-String apiKey = httpRequest.getHeader("X-API-KEY");
+String apiKey = httpRequest.getHeader(API_KEY_HEADER);
 
 String requestURI = httpRequest.getRequestURI();
 
@@ -89,6 +91,11 @@ List<ApiKeyResponse>
 	}
 	}
 	}
+
+
+
+
+
 
 
 
