--- a/src/main/resources/templates/infrastructure/security/authService.mustache
+++ b/src/main/resources/templates/infrastructure/security/authService.mustache
@@ -48,7 +48,7 @@ throw new IllegalArgumentException(
 }
 
 
-String token = jwtService.generateToken(authentication);
+String token = jwtService.generateToken(authentication, metaRequest);
 
 
 return AuthResponseDto.builder()
