--- a/src/main/resources/templates/infrastructure/security/currentTenantIdentifierResolverImpl.mustache
+++ b/src/main/resources/templates/infrastructure/security/currentTenantIdentifierResolverImpl.mustache
@@ -3,6 +3,7 @@ package {{package}};
 {{#imports}}
 	import {{.}};
 {{/imports}}
+
 import jakarta.servlet.http.HttpServletRequest;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
@@ -11,32 +12,42 @@ import org.springframework.stereotype.Component;
 import org.springframework.web.context.request.RequestContextHolder;
 import org.springframework.web.context.request.ServletRequestAttributes;
 
+
 @Slf4j
 @Component
 @RequiredArgsConstructor
-public class CurrentTenantIdentifierResolverImpl implements CurrentTenantIdentifierResolver {
-
-private static final String DEFAULT_TENANT = "default";
-private static final String TENANT_HEADER = "X-Tenant-ID";
+public class {{className}} implements CurrentTenantIdentifierResolver {
 
 private final TenantRepository tenantRepository;
 
 @Override
 public String resolveCurrentTenantIdentifier() {
 ServletRequestAttributes attrs = (ServletRequestAttributes) RequestContextHolder.getRequestAttributes();
+
+log.info("Current tenant identifier resolver called");
+log.info("ServletRequestAttributes: {}", attrs);
+
 if (attrs == null) {
 return DEFAULT_TENANT;
 }
 HttpServletRequest request = attrs.getRequest();
+
+if (request != null) {
+log.info("Request: {}", request.toString());
+} else {
+log.warn("Request is null");
+}
+
 String tenantId = request.getHeader(TENANT_HEADER);
 
-if(tenantId == null || tenantId.isEmpty()) {
+if (tenantId == null || tenantId.isEmpty()) {
+log.warn("Tenant ID not found in request header, using default tenant");
 tenantId = DEFAULT_TENANT;
 }
 
 log.info("Current tenant identifier: {}", tenantId);
 
-return  tenantRepository.findByName(tenantId).orElseThrow().getId();
+return tenantRepository.findByName(tenantId).orElseThrow().getId();
 }
 
 @Override
@@ -44,3 +55,4 @@ public boolean validateExistingCurrentSessions() {
 return true;
 }
 }
+
