--- a/src/main/resources/templates/infrastructure/security/forgotPasswordControllerTest.mustache
+++ b/src/main/resources/templates/infrastructure/security/forgotPasswordControllerTest.mustache
@@ -47,7 +47,7 @@ private final String username = "admin";
 private final String password = "admin";
 
 private void createUser() {
-if (userRepository.findByUsername(username).isEmpty()) {
+if (userRepository.findByUsernameAndTenantName(username,DEFAULT_TENANT).isEmpty()) {
 CustomUser user = CustomUser.builder()
 .id(UUID.randomUUID().toString())
 .username(username)
@@ -117,7 +117,7 @@ mockMvc.perform(post("/api/auth/reset-password")
 .content(objectMapper.writeValueAsString(dto)))
 .andExpect(status().isOk());
 
-var user = userRepository.findByUsername(username).orElseThrow();
+var user = userRepository.findByUsernameAndTenantName(username,DEFAULT_TENANT).orElseThrow();
 assertThat(encoder.matches("newpass", user.getPassword())).isTrue();
 }
 
