--- a/src/main/resources/templates/infrastructure/security/jwtService.mustache
+++ b/src/main/resources/templates/infrastructure/security/jwtService.mustache
@@ -29,27 +29,24 @@ private final RefreshTokenService refreshTokenService;
 @Value("${security.jwt.expiration}")
 private long tokenValidityInSeconds;
 
-public String generateToken(Authentication authentication) {
+public String generateToken(Authentication authentication, MetaRequest metaRequest) {
 Instant now = Instant.now();
 var authorities = authentication.getAuthorities().stream()
 .map(Object::toString)
 .collect(Collectors.joining(" "));
 
 Boolean isAdmin = authentication.getAuthorities().stream()
-.anyMatch(a -> a.getAuthority().equals("IS_ADMIN"));
+.anyMatch(a -> a.getAuthority().equals(IS_ADMIN));
 
 UserPrincipal userPrincipal = (UserPrincipal) authentication.getPrincipal();
 
 String userId = userPrincipal.getId();
 
-{{#isMultiTenant}}
-String tenantId = userPrincipal.getTenantId();
+String tenantId = metaRequest.getTenantId();
 
 if (tenantId == null) {
-	tenantId = "NA";
+throw new IllegalArgumentException("Tenant ID ");
 }
-
-{{/isMultiTenant}}
 
 if(userId == null) {
 	throw new IllegalArgumentException("User ID ");
@@ -61,9 +58,7 @@ var claims = JwtClaimsSet.builder()
 .subject(authentication.getName())
 .claim("userId", userId)
 .claim("isAdmin", isAdmin)
-{{#isMultiTenant}}
 .claim("tenantId", tenantId)
-{{/isMultiTenant}}
 .claim("scope", authorities)
 .build();
 
@@ -71,7 +66,7 @@ var header = JwsHeader.with(JWT_ALGORITHM).build();
 
 String token = jwtEncoder.encode(JwtEncoderParameters.from(header, claims)).getTokenValue();
 
-refreshTokenService.save(token);
+refreshTokenService.save(token,metaRequest);
 
 return token;
 }
