--- a/src/main/resources/templates/tests/AggregateTests.mustache
+++ b/src/main/resources/templates/tests/AggregateTests.mustache
@@ -12,10 +12,10 @@ void it_should_create_{{lowerName}}_with_valid_values() {
 {{#fields}}
 	{{type}} {{name}} = {{type}}.create({{{testDomainValue}}});
 {{/fields}}
-	{{aggregateName}} {{lowerName}} = new {{aggregateName}}({{#fields}}{{name}}{{^last}}, {{/last}}{{/fields}});
-	assertThat({{lowerName}}.getId()).isNotNull();
+	{{aggregateName}} aggregate{{aggregateName}} = new {{aggregateName}}({{#fields}}{{name}}{{^last}}, {{/last}}{{/fields}});
+	assertThat(aggregate{{aggregateName}}.getId()).isNotNull();
 {{#fields}}
-	assertThat({{lowerName}}.get{{nameCapitalized}}()).isEqualTo({{name}});
+	assertThat(aggregate{{aggregateName}}.get{{nameCapitalized}}()).isEqualTo({{name}});
 {{/fields}}
 }
 
