--- a/src/main/resources/templates/domain/mailSender.mustache
+++ b/src/main/resources/templates/domain/mailSender.mustache
@@ -4,6 +4,9 @@ package {{package}};
 import {{.}};
 {{/imports}}
 
-public interface {{className}}  {
+
+public interface MailSender {
 	void send(String from, String to, String subject, String content);
+	boolean isValidEmail(String email);
 }
+
