--- a/src/main/resources/templates/infrastructure/security/passwordResetService.mustache
+++ b/src/main/resources/templates/infrastructure/security/passwordResetService.mustache
@@ -3,17 +3,23 @@ package {{package}};
 {{#imports}}
 import {{.}};
 {{/imports}}
+
 import jakarta.transaction.Transactional;
 import lombok.RequiredArgsConstructor;
+import lombok.extern.slf4j.Slf4j;
 import org.axonframework.commandhandling.gateway.CommandGateway;
+import org.axonframework.messaging.responsetypes.ResponseTypes;
 import org.axonframework.queryhandling.QueryGateway;
 import org.springframework.security.crypto.password.PasswordEncoder;
 import org.springframework.stereotype.Service;
+
 import java.time.Instant;
 import java.util.UUID;
 import java.util.concurrent.ExecutionException;
+
 import org.axonframework.eventhandling.EventHandler;
 
+@Slf4j
 @Service
 @RequiredArgsConstructor
 public class PasswordResetService {
@@ -24,7 +30,7 @@ private final CommandGateway commandGateway;
 private final QueryGateway queryGateway;
 private final MailSender mailSender;
 
-public String createToken(String email,MetaRequest metaRequest) {
+public String createToken(String email, MetaRequest metaRequest) {
 String token = UUID.randomUUID().toString();
 Instant expiration = Instant.now().plusSeconds(3600);
 
@@ -32,6 +38,7 @@ var command = CreatePasswordResetCommand.builder()
 .token(PasswordResetToken.create(token))
 .username(PasswordResetUsername.create(email))
 .expiration(PasswordResetExpiration.create(expiration))
+.tenant(PasswordResetTenant.create(metaRequest.getTenantId()))
 .build();
 
 commandGateway.sendAndWait(command);
@@ -42,33 +49,66 @@ return token;
 public boolean resetPassword(String token, String newPassword, MetaRequest metaRequest) {
 try {
 
-var query = new FindByPasswordResetTokenQuery(PasswordResetToken.create(token),metaRequest);
-var tokenEntity = queryGateway.query(query, PasswordResetResponse.class).get();
+var query = new FindByPasswordResetTokenQuery(PasswordResetToken.create(token), metaRequest);
+var tokenEntityList = queryGateway.query(
+query,
+ResponseTypes.multipleInstancesOf(PasswordResetResponse.class)
+).get();
 
-if (tokenEntity == null || tokenEntity.getExpiration().isBefore(Instant.now())) return false;
+var tokenEntity = tokenEntityList.stream()
+.findFirst().orElse(null);
 
-var user = userRepo.findByUsernameAndTenantId(tokenEntity.getUsername(),metaRequest.getTenantId()).orElse(null);
-if (user == null) return false;
+
+if (tokenEntity == null || tokenEntity.getExpiration().isBefore(Instant.now())) {
+log.error("Token not found or expired for token: {}", token);
+return false;
+};
+
+//todo move to full CQRS , by using a query to get the user
+var user =
+userRepo.findByUsernameAndTenantId(tokenEntity.getUsername(), metaRequest.getTenantId())
+.orElse(null);
+if (user == null) {
+log.info("User not found for username: {}", tokenEntity.getUsername());
+return false;
+}
 
 user.setPassword(encoder.encode(newPassword));
 
+//todo move to full CQRS , by using a command to delete the user
 var deleteCommand = DeletePasswordResetCommand.builder()
 .id(PasswordResetId.create(tokenEntity.getId()))
 .build();
 
+log.info("Deleting password reset token for user: {}", tokenEntity.getId());
+
 commandGateway.send(deleteCommand);
+
+log.info("Password reset successfully for user: {}", tokenEntity.getUsername());
 return true;
 
 } catch (InterruptedException | ExecutionException e) {
+log.error("Error while resetting password: {}", e.getMessage());
+e.printStackTrace();
 return false;
 }
 }
 
 @EventHandler
 public void on(PasswordResetCreatedEvent event) {
+
+String email = event.getUsername().value();
+
+log.info("Password reset event triggered for email: {}", email);
+if(!mailSender.isValidEmail(email)) {
+email = "contact@pcoundia.com";
+log.info("Email is null or empty, using default email: {}", email);
+}
+
+log.info("Sending password reset email to: {}", event.getUsername().value());
 this.mailSender.send(
 "noreply@pcoundia.com",
-event.getUsername().value(),
+email,
 "Password Reset",
 "Your token: " + event.getToken()
 );
